testdata/fixtures/audit/positive/api_key_client_object_ts.ts
// W3: the TS object-property (pair) form — a NEXT_PUBLIC_ key in an object
// literal — previously had no positive fixture (value is fake).
const config: { NEXT_PUBLIC_STRIPE_KEY: string } = {
  NEXT_PUBLIC_STRIPE_KEY: "sk_live_FAKEFAKEFAKE1234",
};

export default config;
